--- a/index.html
+++ b/index.html
@@ -1,7 +1,85 @@
-<head>
-<title>Spectabis</title>
-</head>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Spectabis Launcher</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="landing">
+		<div id="page-wrapper">
 
-<body>
-Hey, something will be here!
-</body>
+			<!-- Banner -->
+				<section id="banner">
+					<h2>Spectabis</h2>
+					<p>A modern approach to launch your favourite Playstation 2 games.</p>
+					<ul class="actions">
+						<li><a href="https://github.com/Spectabis/PCSX2-Spectabis/releases" class="button special">Download</a></li>
+						<li><a href="#" class="button">Learn More</a></li>
+					</ul>
+				</section>
+
+			<!-- Main -->
+				<section id="main" class="container">
+
+					<section class="box special">
+						<header class="major">
+							<h2>Introducing Spectabis.
+							<br />
+							The modern PCSX2 frontend.</h2>
+							<p>Spectabis is a free custom frontend for PlayStation®2 emulator PCSX2.<br />
+							Add a game and play it!</p>
+						</header>
+						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+					</section>
+
+					<section class="box special features">
+						<div class="features-row">
+							<section>
+								<span class="icon major fa-bolt accent2"></span>
+								<h3>Per-Game Configuration</h3>
+								<p>Different games need different configurations. Configure your game from Spectabis and play it forever. Open nature of Spectabis even allows you to share configuration files with your friends!</p>
+							</section>
+							<section>
+								<span class="icon major fa-area-chart accent3"></span>
+								<h3>Automated Management</h3>
+								<p>When adding a game file, Spectabis finds title of the game and automatically searches for a fancy box art image to put on your wall.</p>
+							</section>
+						</div>
+						<div class="features-row">
+							<section>
+								<span class="icon major fa-cloud accent4"></span>
+								<h3>Modern Looks</h3>
+								<p>Spectabis tries to follow Google's Material Design language, which gives it a timeless, modern look.</p>
+							</section>
+							<section>
+								<span class="icon major fa-lock accent5"></span>
+								<h3>Convenience</h3>
+								<p>You can control most of the emulation settings right from Spectabis. You can even use the new MIP mapping hack.</p>
+							</section>
+						</div>
+					</section>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://github.com/Spectabis/PCSX2-Spectabis" class="icon fa-github"><span class="label">Github</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; The content of this site is licensed under the GNU GPLv3 license.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollgress.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
