Added redirection to PCSX2 forum thread

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<p>A modern approach to launch your favourite Playstation 2 games.</p>
 					<ul class="actions">
 						<li><a href="https://github.com/Spectabis/PCSX2-Spectabis/releases" class="button special">Download</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="http://forums.pcsx2.net/Thread-Spectabis-A-better-PCSX2-frontend" class="button">Learn More</a></li>
 					</ul>
 				</section>
 
