--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Spectabis Launcher</title>
+		<title>Spectabis | Frontend</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
