Fixed github footer link to point to this repo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://github.com/Spectabis/PCSX2-Spectabis" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/Spectabis/spectabis.github.io" class="icon fa-github"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; The content of this site is licensed under the GNU GPLv3 license.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
