Change flavour text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h2>Introducing Spectabis.
 						<br>
 						The modern PCSX2 frontend.</h2>
-						<p>Spectabis is a free custom frontend for PlayStation®2 emulator PCSX2.<br>
+						<p>A modern approach in managing your Playstation 2 library.<br>
 						Add a game and play it!<br>
 			 <br>
 Learn more <a href="https://github.com/FaithLV/Spectabis/blob/master/README.md">here</a>.
